# DeexcitationHandler

./: CMakeLists.txt  Config.cmake.in  main.cpp
Deexcitation/: DeexcitationModule.h  G4HandlerConverter.cpp  G4HandlerConverter.h  G4HandlerFactory.cpp  G4HandlerFactory.h
Deexcitation/COLA/test/: CMakeLists.txt
Deexcitation/converter/: FermiConverter.cpp  FermiConverter.h  G4HandlerConverter.cpp
Deexcitation/factory/: FermiFactory.cpp  FermiFactory.h  G4HandlerFactory.cpp  G4HandlerFactory.h
Deexcitation/handler/: ExcitationHandler.cpp  ExcitationHandler.h  FermiBreakUpWrapper.cpp  FermiBreakUpWrapper.h
runner/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  TestCOLA.cpp  TestHandler.cpp
